--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -16,3 +16,5 @@ host-suffix,swscan.apple.com,REJECT
 host-suffix,appldnld.apple.com,REJECT
 host-suffix,mesu.apple.com,REJECT
 
+[http_backend]
+https://raw.githubusercontent.com/chavyleung/scripts/master/box/chavy.boxjs.js, tag=BoxJs, path=^/, enabled=true
