--- a/Quantumultx.conf
+++ b/Quantumultx.conf
@@ -112,6 +112,13 @@ ip6-cidr, fe80::/10, direct
 ip-cidr, 203.107.1.1/24, reject
 ip-cidr, 183.240.197.130/32, direct
 final, 黑白名单
+#ios-ota-blocker
+host-suffix,ipsw.me,REJECT
+host-suffix,gdmf.apple.com,REJECT
+host-suffix,xp.apple.com,REJECT
+host-suffix,swscan.apple.com,REJECT
+host-suffix,appldnld.apple.com,REJECT
+host-suffix,mesu.apple.com,REJECT
 
 [rewrite_local]
 ^http:\/\/wx.10086.cn\/website\/taskCenter\/index\? url script-request-header https://raw.githubusercontent.com/chavyleung/scripts/master/10086/10086.cookie.js
