--- a/Quantumultx.conf
+++ b/Quantumultx.conf
@@ -88,14 +88,12 @@ https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/Js_Remote_Coo
 https://raw.githubusercontent.com/yqc007/QuantumultX/master/BananaVideoCrack.js, tag=香蕉视频VIP, update-interval=172800, opt-parser=true, enabled=true
 https://raw.githubusercontent.com/yqc007/QuantumultX/master/Purity/DisableBaiduJumpAction.js, tag=屏蔽百度跳转, update-interval=172800, opt-parser=true, enabled=true
 https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/Js.conf, tag=Script, update-interval=172800, opt-parser=true, enabled=true
-# 解锁完整的Apple搜索功能和集成服务
 https://raw.githubusercontent.com/VirgilClyne/iRingo/main/qxrewrite/Siri.qxrewrite, tag=解锁Apple搜索功能, update-interval=86400, enabled=true
-# iRingo for Apple Weather
 https://raw.githubusercontent.com/VirgilClyne/iRingo/main/qxrewrite/Weather.qxrewrite, tag=iRingo for Apple Weather, update-interval=86400, enabled=true
-# iRingo for Location Services
 https://raw.githubusercontent.com/VirgilClyne/iRingo/main/qxrewrite/Location.qxrewrite, tag=iRingo for Location Services, update-interval=86400, opt-parser=false, enabled=true
 https://raw.githubusercontent.com/yqc007/QuantumultX/master/WPSDocerVIPuserCrack.js, tag=WPS稻壳会员, update-interval=172800, opt-parser=true, enabled=true
 https://raw.githubusercontent.com/I-am-R-E/Functional-Store-Hub/Master/WPSOffice/QuantumultX.snippet, tag=WPS超级会员, update-interval=172800, opt-parser=true, enabled=true
+https://raw.githubusercontent.com/yangdaozhao/ylgy/master/config.conf, tag=羊了个羊, update-interval=172800, opt-parser=true, enabled=true
 
 [server_local]
 
