--- a/Quantumultx.conf
+++ b/Quantumultx.conf
@@ -74,7 +74,7 @@ https://raw.githubusercontent.com/DivineEngine/Profiles/master/Surge/Ruleset/Ext
 [rewrite_remote]
 https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/Js.conf, tag=Script, update-interval=172800, opt-parser=true, enabled=true
 https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/Js_Remote_Cookie.conf, tag=Cookie, update-interval=172800, opt-parser=true, enabled=true
-https://raw.githubusercontent.com/chavyleung/scripts/master/box/rewrite/boxjs.rewrite.quanx.conf, tag=BoxJs, update-interval=172800, opt-parser=false, enabled=true
+https://raw.githubusercontent.com/Angelwized/QuantumultX/main/mitm.conf, tag=BoxJs, update-interval=172800, opt-parser=false, enabled=true
 https://raw.githubusercontent.com/Peng-YM/Sub-Store/master/config/QX.snippet, tag=Sub Store, update-interval=172800, opt-parser=false, enabled=true
 https://raw.githubusercontent.com/Orz-3/QuantumultX/master/JD_TB_price.conf, tag=比价脚本, update-interval=172800, opt-parser=false, enabled=true
 https://raw.githubusercontent.com/Angelwized/QuantumultX/main/mitm.conf, tag=域名修正, update-interval=172800, opt-parser=false, enabled=true
