--- a/Quantumultx.conf
+++ b/Quantumultx.conf
@@ -92,6 +92,7 @@ https://raw.githubusercontent.com/DivineEngine/Profiles/master/Quantumult/Rewrit
 https://raw.githubusercontent.com/I-am-R-E/QuantumultX/main/DouBan.conf, tag=解锁豆瓣, update-interval=172800, opt-parser=false, enabled=true
 https://raw.githubusercontent.com/I-am-R-E/QuantumultX/main/CaiPuDaQuan.conf, tag=菜谱大全, update-interval=172800, opt-parser=false, enabled=true
 https://raw.githubusercontent.com/yangdaozhao/ylgy/master/config.conf, tag=羊了个羊, update-interval=172800, opt-parser=true, enabled=true
+https://raw.githubusercontent.com/yqc007/QuantumultX/master/PornComicsCrack.js, tag=解锁猕猴桃, update-interval=172800, opt-parser=true, enabled=true
 https://raw.githubusercontent.com/yqc007/QuantumultX/master/BananaVideoCrack.js, tag=香蕉视频VIP, update-interval=172800, opt-parser=true, enabled=true
 https://raw.githubusercontent.com/nameking77/Qx/main/rewrite/kw.js, tag=酷我音乐VIP, update-interval=172800, opt-parser=true, enabled=true
 https://raw.githubusercontent.com/yqc007/QuantumultX/master/WPSDocerVIPuserCrack.js, tag=WPS稻壳会员, update-interval=172800, opt-parser=true, enabled=true
